MCDocumentRuleToken/Lexer/mcdocParserParser.java
// Generated from D:/C#Project/MinecraftLanguageServer/MCDocumentRule/mcdocParser.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class mcdocParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, WS=66, NewLine=67, 
		At=68, LogicalOR=69, Comma=70, DoubleColon=71, ColonMark=72, DoubleDot=73, 
		StringKeyType=74, BooleanKeyType=75, ByteKeyType=76, ShortKeyType=77, 
		IntKeyType=78, FloatKeyType=79, DoubleKeyType=80, LongKeyType=81, Use=82, 
		DocFilePath=83, FieldValue=84, Commentary=85, RegexPattern=86, DoubleQuotes=87, 
		Integer=88, FloatExponent=89, Float=90, String=91, VersionString=92, DispatcherKeyString=93, 
		DispatcherValue=94, Number=95, PositiveInteger=96, ResourceLocationChar=97, 
		ResourceLocation=98, IdentContinue=99, IdentStart=100, Identifier=101, 
		TypedNumber=102, PathSegment=103, Path=104, AccessorKey=105, Accessor=106, 
		DynamicIndex=107, StaticIndexKey=108;
	public static final int
		RULE_logicalOR = 0, RULE_baseDataType = 1, RULE_keywordType = 2, RULE_booleanType = 3, 
		RULE_booleanKeyType = 4, RULE_questionMark = 5, RULE_integerRange = 6, 
		RULE_floatRange = 7, RULE_integer = 8, RULE_float = 9, RULE_versionString = 10, 
		RULE_positiveInteger = 11, RULE_identifier = 12, RULE_commentary = 13, 
		RULE_fieldValue = 14, RULE_stringType = 15, RULE_literalType = 16, RULE_numericType = 17, 
		RULE_listType = 18, RULE_tupleType = 19, RULE_prelim = 20, RULE_enumType = 21, 
		RULE_enumValue = 22, RULE_enumField = 23, RULE_enumBlock = 24, RULE_enum = 25, 
		RULE_referenceType = 26, RULE_dispatcherType = 27, RULE_unionType = 28, 
		RULE_index = 29, RULE_indexBody = 30, RULE_indexOnAType = 31, RULE_typeArgBlock = 32, 
		RULE_unAttributedType = 33, RULE_type = 34, RULE_documentAttributeSet = 35, 
		RULE_arrayLength = 36, RULE_primitiveArrayType = 37, RULE_dataType = 38, 
		RULE_canonical = 39, RULE_color = 40, RULE_commandSlashOptions = 41, RULE_commandMacroOptions = 42, 
		RULE_commandEmptyOptions = 43, RULE_commandMaxLength = 44, RULE_commandParameters = 45, 
		RULE_command = 46, RULE_deprecated = 47, RULE_dispatcher_key = 48, RULE_divisible_by = 49, 
		RULE_entityAmount = 50, RULE_entityType = 51, RULE_entityParameters = 52, 
		RULE_entity = 53, RULE_gameRuleParameter = 54, RULE_gameRule = 55, RULE_idRegistry = 56, 
		RULE_idTags = 57, RULE_idParameters = 58, RULE_id = 59, RULE_match_regex = 60, 
		RULE_nbt = 61, RULE_nbt_path = 62, RULE_objective = 63, RULE_regex_pattern = 64, 
		RULE_score_holder = 65, RULE_since = 66, RULE_until = 67, RULE_tag = 68, 
		RULE_team = 69, RULE_text_component = 70, RULE_uuid = 71, RULE_usefilePath = 72, 
		RULE_useSentence = 73, RULE_documentAttribute = 74, RULE_field = 75, RULE_fields = 76, 
		RULE_structReference = 77, RULE_superInvoke = 78, RULE_structContent = 79, 
		RULE_structName = 80, RULE_structSentence = 81, RULE_document = 82;
	private static String[] makeRuleNames() {
		return new String[] {
			"logicalOR", "baseDataType", "keywordType", "booleanType", "booleanKeyType", 
			"questionMark", "integerRange", "floatRange", "integer", "float", "versionString", 
			"positiveInteger", "identifier", "commentary", "fieldValue", "stringType", 
			"literalType", "numericType", "listType", "tupleType", "prelim", "enumType", 
			"enumValue", "enumField", "enumBlock", "enum", "referenceType", "dispatcherType", 
			"unionType", "index", "indexBody", "indexOnAType", "typeArgBlock", "unAttributedType", 
			"type", "documentAttributeSet", "arrayLength", "primitiveArrayType", 
			"dataType", "canonical", "color", "commandSlashOptions", "commandMacroOptions", 
			"commandEmptyOptions", "commandMaxLength", "commandParameters", "command", 
			"deprecated", "dispatcher_key", "divisible_by", "entityAmount", "entityType", 
			"entityParameters", "entity", "gameRuleParameter", "gameRule", "idRegistry", 
			"idTags", "idParameters", "id", "match_regex", "nbt", "nbt_path", "objective", 
			"regex_pattern", "score_holder", "since", "until", "tag", "team", "text_component", 
			"uuid", "usefilePath", "useSentence", "documentAttribute", "field", "fields", 
			"structReference", "superInvoke", "structContent", "structName", "structSentence", 
			"document"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'any'", "'true'", "'false'", "'?'", "'@'", "'['", "']'", "',]'", 
			"'='", "'{'", "'}'", "'enum'", "'('", "')'", "'<'", "'>'", "'<,'", "'[]'", 
			"'#[canonical]'", "'#[color='", "'slash='", "'macro='", "'empty='", "'max_length='", 
			"'#[command('", "') string'", "'#[deprecated='", "'#[dispatcher_key='", 
			"'] string'", "'#[divisible_by='", "'amount='", "'multiple'", "'single'", 
			"'type='", "'entities'", "'players'", "'#[entity('", "'\"boolean\"'", 
			"'\"int\"'", "'#[game_rule('", "')]'", "'registry='", "'tags='", "'allowed'", 
			"'implicit'", "'required'", "'#[id('", "')] string'", "'#[match_regex=\"'", 
			"'\"] string'", "'#[nbt=ItemStack] string'", "'#[nbt_path] string'", 
			"'#[objective] string'", "'#[regex_pattern] string'", "'#[score_holder] string'", 
			"'#[since=\"'", "'\"]'", "'#[until=\"'", "'#[tag] string'", "'#[team] string'", 
			"'#[text_component] string'", "'#[uuid]'", "'...'", "'...super::'", "'struct'", 
			null, "'\\n'", "'@ '", "'|'", "','", "'::'", "':'", "'..'", "'string'", 
			"'boolean'", "'byte'", "'short'", "'int'", "'float'", "'double'", "'long'", 
			"'use'", null, null, null, null, "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "WS", "NewLine", "At", "LogicalOR", 
			"Comma", "DoubleColon", "ColonMark", "DoubleDot", "StringKeyType", "BooleanKeyType", 
			"ByteKeyType", "ShortKeyType", "IntKeyType", "FloatKeyType", "DoubleKeyType", 
			"LongKeyType", "Use", "DocFilePath", "FieldValue", "Commentary", "RegexPattern", 
			"DoubleQuotes", "Integer", "FloatExponent", "Float", "String", "VersionString", 
			"DispatcherKeyString", "DispatcherValue", "Number", "PositiveInteger", 
			"ResourceLocationChar", "ResourceLocation", "IdentContinue", "IdentStart", 
			"Identifier", "TypedNumber", "PathSegment", "Path", "AccessorKey", "Accessor", 
			"DynamicIndex", "StaticIndexKey"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "mcdocParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public mcdocParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogicalORContext extends ParserRuleContext {
		public TerminalNode LogicalOR() { return getToken(mcdocParserParser.LogicalOR, 0); }
		public LogicalORContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalOR; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).enterLogicalOR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).exitLogicalOR(this);
		}
	}

	public final LogicalORContext logicalOR() throws RecognitionException {
		LogicalORContext _localctx = new LogicalORContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_logicalOR);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(LogicalOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BaseDataTypeContext extends ParserRuleContext {
		public TerminalNode StringKeyType() { return getToken(mcdocParserParser.StringKeyType, 0); }
		public TerminalNode BooleanKeyType() { return getToken(mcdocParserParser.BooleanKeyType, 0); }
		public TerminalNode ByteKeyType() { return getToken(mcdocParserParser.ByteKeyType, 0); }
		public TerminalNode ShortKeyType() { return getToken(mcdocParserParser.ShortKeyType, 0); }
		public TerminalNode IntKeyType() { return getToken(mcdocParserParser.IntKeyType, 0); }
		public TerminalNode FloatKeyType() { return getToken(mcdocParserParser.FloatKeyType, 0); }
		public TerminalNode DoubleKeyType() { return getToken(mcdocParserParser.DoubleKeyType, 0); }
		public TerminalNode LongKeyType() { return getToken(mcdocParserParser.LongKeyType, 0); }
		public BaseDataTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_baseDataType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).enterBaseDataType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).exitBaseDataType(this);
		}
	}

	public final BaseDataTypeContext baseDataType() throws RecognitionException {
		BaseDataTypeContext _localctx = new BaseDataTypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_baseDataType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			_la = _input.LA(1);
			if ( !(((((_la - 74)) & ~0x3f) == 0 && ((1L << (_la - 74)) & 255L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class KeywordTypeContext extends ParserRuleContext {
		public BooleanTypeContext booleanType() {
			return getRuleContext(BooleanTypeContext.class,0);
		}
		public KeywordTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_keywordType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).enterKeywordType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).exitKeywordType(this);
		}
	}

	public final KeywordTypeContext keywordType() throws RecognitionException {
		KeywordTypeContext _localctx = new KeywordTypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_keywordType);
		try {
			setState(172);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(170);
				match(T__0);
				}
				break;
			case T__1:
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(171);
				booleanType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BooleanTypeContext extends ParserRuleContext {
		public BooleanTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).enterBooleanType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).exitBooleanType(this);
		}
	}

	public final BooleanTypeContext booleanType() throws RecognitionException {
		BooleanTypeContext _localctx = new BooleanTypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_booleanType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			_la = _input.LA(1);
			if ( !(_la==T__1 || _la==T__2) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BooleanKeyTypeContext extends ParserRuleContext {
		public TerminalNode BooleanKeyType() { return getToken(mcdocParserParser.BooleanKeyType, 0); }
		public BooleanKeyTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanKeyType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).enterBooleanKeyType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).exitBooleanKeyType(this);
		}
	}

	public final BooleanKeyTypeContext booleanKeyType() throws RecognitionException {
		BooleanKeyTypeContext _localctx = new BooleanKeyTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_booleanKeyType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(BooleanKeyType);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionMarkContext extends ParserRuleContext {
		public QuestionMarkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionMark; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).enterQuestionMark(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).exitQuestionMark(this);
		}
	}

	public final QuestionMarkContext questionMark() throws RecognitionException {
		QuestionMarkContext _localctx = new QuestionMarkContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_questionMark);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IntegerRangeContext extends ParserRuleContext {
		public List<IntegerContext> integer() {
			return getRuleContexts(IntegerContext.class);
		}
		public IntegerContext integer(int i) {
			return getRuleContext(IntegerContext.class,i);
		}
		public TerminalNode DoubleDot() { return getToken(mcdocParserParser.DoubleDot, 0); }
		public IntegerRangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integerRange; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).enterIntegerRange(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).exitIntegerRange(this);
		}
	}

	public final IntegerRangeContext integerRange() throws RecognitionException {
		IntegerRangeContext _localctx = new IntegerRangeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_integerRange);
		int _la;
		try {
			setState(189);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==DoubleDot) {
					{
					setState(180);
					match(DoubleDot);
					}
				}

				setState(183);
				integer();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(184);
				integer();
				setState(185);
				match(DoubleDot);
				setState(187);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Integer) {
					{
					setState(186);
					integer();
					}
				}

				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FloatRangeContext extends ParserRuleContext {
		public List<FloatContext> float_() {
			return getRuleContexts(FloatContext.class);
		}
		public FloatContext float_(int i) {
			return getRuleContext(FloatContext.class,i);
		}
		public TerminalNode DoubleDot() { return getToken(mcdocParserParser.DoubleDot, 0); }
		public FloatRangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_floatRange; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).enterFloatRange(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).exitFloatRange(this);
		}
	}

	public final FloatRangeContext floatRange() throws RecognitionException {
		FloatRangeContext _localctx = new FloatRangeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_floatRange);
		int _la;
		try {
			setState(200);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(192);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==DoubleDot) {
					{
					setState(191);
					match(DoubleDot);
					}
				}

				setState(194);
				float_();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(195);
				float_();
				setState(196);
				match(DoubleDot);
				setState(198);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Float) {
					{
					setState(197);
					float_();
					}
				}

				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IntegerContext extends ParserRuleContext {
		public TerminalNode Integer() { return getToken(mcdocParserParser.Integer, 0); }
		public IntegerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).enterInteger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).exitInteger(this);
		}
	}

	public final IntegerContext integer() throws RecognitionException {
		IntegerContext _localctx = new IntegerContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_integer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(202);
			match(Integer);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FloatContext extends ParserRuleContext {
		public TerminalNode Float() { return getToken(mcdocParserParser.Float, 0); }
		public FloatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_float; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).enterFloat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).exitFloat(this);
		}
	}

	public final FloatContext float_() throws RecognitionException {
		FloatContext _localctx = new FloatContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_float);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(204);
			match(Float);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VersionStringContext extends ParserRuleContext {
		public TerminalNode VersionString() { return getToken(mcdocParserParser.VersionString, 0); }
		public VersionStringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_versionString; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).enterVersionString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mcdocParserListener ) ((mcdocParserListener)listener).exitVersionString(this);
		}
	}
